--- a/css/main.css
+++ b/css/main.css
@@ -111,12 +111,12 @@ body {
     line-height: 50px;
     display: block;
     width: 50%;
-    margin-right: 10rem;
-    font-size: 24px;
+    margin-right: 2rem;
+    font-size: 36px;
 }
 
-.how-to h1 + h1 {
-    margin-left: 20rem;
+.how-to p + p {
+    margin-left: 10rem;
 }
 
 .hadouken,
